--- a/webroot/css/viewUserAdmin.css
+++ b/webroot/css/viewUserAdmin.css
@@ -45,6 +45,28 @@ button{
     border-left: 1px solid #CCCCCC;
 }
 
+.deleteButton1 a
+{
+    background: #da151b url(img/overlay.png) repeat-x;
+    padding: 6px 8px 6px;
+    color: #fff;
+    text-decoration: none;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+    -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+    text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
+    cursor: pointer;
+
+    font-size:16px;
+    margin:5px;
+    position:static;
+    border-top: 1px solid #CCCCCC;
+    border-right: 1px solid #333333;
+    border-bottom: 1px solid #333333;
+    border-left: 1px solid #CCCCCC;
+}
+
 .editButton a
 {
     background: #5054da url(img/overlay.png) repeat-x;
